--- a/src/components/RSVPstyle.scss
+++ b/src/components/RSVPstyle.scss
@@ -1,21 +1,21 @@
-.app__footer {
-  flex: 1;
-  width: 100%;
-  flex-direction: column;
+// .app__footer {
+//   flex: 1;
+//   width: 100%;
+//   flex-direction: column;
 
-  @media screen and (max-width: 768px) {
-    flex-direction: column;
-  }
-}
+//   @media screen and (max-width: 768px) {
+//     flex-direction: column;
+//   }
+// }
 
 .app__footer-cards {
-  width: 60%;
-  display: flex;
-  justify-content: center;
+  width: 50vw;
+  display:flex;
+  justify-content:center;
   align-items: center;
   flex-wrap: wrap;
   margin: .5em 18rem 2rem;
-  font-size: 4rem;
+  font-size: 3rem;
 
   .app__footer-card {
     min-width: 290px;
@@ -46,15 +46,17 @@
       font-size: x-large;
       color: rgb(253, 253, 253);
     }
+  
     &:hover {
       box-shadow: 0 0 25px #fef4f5;
     }
     @media screen and (max-width: 450px) {
-      width: 100%;
+      width: 55%;
     }
   }
-  @media screen and (max-width: 768px) {
-    width: 100%;
+  @media screen and (max-width: 1000px) {
+    width: 25%;
+    margin-left: 40%;
 }
 }
 
